--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="loginGrey">#858585</color>
+    <color name="mediumGrey">#6e6e6e</color>
+    <color name="darkGrey">#2e2e2e</color>
+    <color name="red">#ff0000</color>
 </resources>
